# med-agent

./: .gitignore  implementation_plan.md  start_all_with_mcp.ps1  关闭RAGFlowLite.bat  启动RAGFlowLite.bat  项目控制台.bat
1_core_orchestrator/backend/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  clear_db.py  clear_db_2.py  config.yaml  pyproject.toml  test_ocr.py  test_validator_features.py
1_core_orchestrator/backend/app/core/: thread_state.py
1_core_orchestrator/backend/app/core/checkpointer/: async_provider.py  provider.py
1_core_orchestrator/backend/app/engine/: patient_graph.py
1_core_orchestrator/backend/app/gateway/: app.py  path_utils.py
1_core_orchestrator/backend/docs/: HARNESS_APP_SPLIT.md
1_core_orchestrator/backend/scripts/: check_local_lab_ocr.py
1_core_orchestrator/backend/tests/: test_analyzer_registration.py  test_appointment_router.py  test_brain_imaging_review_flow.py  test_brain_mcp_live.py  test_cases_router.py  test_dependency_warnings.py  test_gateway_start_commands.py  test_imaging_reports_router.py  test_lab_ocr_analyzer.py  test_lead_agent_model_resolution.py  test_local_lab_ocr_runtime.py  test_patient_intake_agent_profile.py  test_patient_intake_middlewares.py  test_patient_record_context.py  test_patient_upload_handoff.py  test_registration_tool_contract.py  test_sandbox_provider_identity.py  test_thread_events_router.py  test_tool_error_handling_middleware.py  test_tool_failfast.py  test_triage_contract.py  test_update_patient_info_tool.py  test_uploads_router.py  test_windows_control_script.py
(+237 files in other folders)
